--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- About-->
     <section class="float-left about-papa">
         <section class="mx-auto  text-white  text-center float-left section1" id="about">
-            <h1 style="margin-left: 10rem;margin-top: 10rem;">Tomasz Paradysz<br>"LoipesMas"</h1>
+            <h1 style="margin-left: 10rem;margin-top: 10rem;"><b>Tomasz Paradysz</b><br>t.paradysz@gmail.com<br>"LoipesMas"</h1>
         </section>
         <section class="about-section text-center float-left" id="about">
           <div class="container">
